# Lava

./: .gitexternals  .gitignore  .gitmodules  .gitsubprojects  CMakeLists.txt  CODE_OF_CONDUCT.md  README.md  REFACTORING.rar  TODO.txt  TO_OTHER_PROJ.tar.7z  _license_.txt  _win32.txt  copyHeader.sh  desktop.ini  hello_triangle.cpp.html  oldCode.rar  report-src.xml
CMake/: CPackConfig.cmake  FindAssimp.cmake  FindGLFW3.cmake  FindGLM.cmake  FindSTBI.cmake  FindVulkan.cmake  GitExternal.cmake  SPVCompilation.cmake  glsl2spirv.cmake  glsl2spv.cmake  glslConfig.cmake
demos/: ButterfliesGrassland.cpp  CMakeLists.txt  CMakeLists__.txt  ClearScreen.cpp  ClipPlane.cpp  ComputeCopy.cpp  ComputeSum.cpp  Earth.cpp  HeightmapTesselation.cpp  MeshExplosion.cpp  MeshNormals.cpp  PipelineStatistics.cpp  QtRender.cpp  README.md  SecondaryBuffer.cpp  Sparkle.cpp  StencilToonOutline.cpp  TexelBuffer.cpp  TriangleIndexed.cpp  TriangleNoBuffer.cpp  VkInfo.cpp  _CMakeLists GOOD.txt  _CMakeLists.txt  routes.h.in
demos/_to_move/: ASTC.txt  ComputeParticles.cpp  DeferredShading.cpp  MultiSetDescriptor.cpp  SwapQuadTexture.cpp  ThreadPool.cpp  VulkanToy.cpp  cosas.cpp  shadowMapping.cpp
demos/_to_move/teapot/: data.cpp  domain.hlsl
demos/_to_move/vulkantoy/shaders/: toy.frag  toy.vert
demos/_to_move/vulkantoy/src/: DescriptorSet.h  Engine.cpp  Engine.h  FileDirectoryWatcher.cpp  FileDirectoryWatcher.h  GfxResources.cpp  GfxResources.h  GpuBuffer.h  GpuImage.h  ImageLoader.cpp  ImageLoader.h  Renderer.cpp  Renderer.h  ShaderCompiler.cpp  ShaderCompiler.h  Window.cpp  Window.h
demos/_todo/: ComputeParticles.cpp  DeferredShading.cpp  DynamicUniformBuffer.cpp  TeapotDepth.cpp
demos/compute/: CMakeLists.txt  ComputeCopy.cpp  ComputeSum.cpp
demos/glfw3DTexture/: CMakeLists.txt  main.cpp
demos/glfwBillboards/: CMakeLists.txt  main.cpp
demos/glfwClipPlane/: CMakeLists.txt  main.cpp
demos/glfwComputeCullLOD/: CMakeLists.txt  main.cpp
demos/glfwCubes/: CMakeLists.txt  main.cpp
demos/glfwDeferredSubpass/: CMakeLists.txt  main.cpp
demos/glfwEarth/: CMakeLists.txt  main.cpp
demos/glfwFractalCompute/: CMakeLists.txt  main.cpp
demos/glfwGears/: CMakeLists.txt  main.cpp
demos/glfwGeometryFigures/: CMakeLists.txt  main.cpp
demos/glfwGrassland/: CMakeLists.txt  main.cpp
demos/glfwImgui/: CMakeLists.txt  main.cpp
demos/glfwInputPostprocess/: CMakeLists.txt  main.cpp
demos/glfwMatcap2DArray/: CMakeLists.txt  main.cpp
demos/glfwMeshExplosion/: CMakeLists.txt  main.cpp
demos/glfwMeshInterpolator/: CMakeLists.txt  main.cpp
demos/glfwMeshNormals/: CMakeLists.txt  main.cpp
demos/glfwMipmapping/: CMakeLists.txt  main.cpp
demos/glfwMultiSetDescriptor/: CMakeLists.txt  main.cpp
demos/glfwMultiViewport/: CMakeLists.txt  main.cpp
demos/glfwMultisample/: CMakeLists.txt  main.cpp
demos/glfwParticles/: CMakeLists.txt  main.cpp
demos/glfwPassthrough/: CMakeLists.txt  main.cpp
demos/glfwPlanarReflection/: CMakeLists.txt  main.cpp
demos/glfwPoints/: CMakeLists.txt  main.cpp
demos/glfwPostProcessing/: CMakeLists.txt  main.cpp
demos/glfwPushDescriptors/: CMakeLists.txt  main.cpp
demos/glfwRender/: CMakeLists.txt  main.cpp
demos/glfwRenderToTexture/: CMakeLists.txt  main.cpp
demos/glfwScreenshoot/: main.cpp
demos/glfwShaderToy/: CMakeLists.txt  main.cpp
demos/glfwShadowMapping/: CMakeLists.txt  main.cpp
demos/glfwSilhouette/: CMakeLists.txt  main.cpp
demos/glfwSparkle/: CMakeLists.txt  main.cpp
demos/glfwSpecializationConstants/: CMakeLists.txt  main.cpp
demos/glfwSwapTexture/: CMakeLists.txt  main.cpp
demos/glfwTexelBuffer/: CMakeLists.txt  main.cpp
demos/glfwThreadPool/: CMakeLists.txt  main.cpp
demos/glfwTriangle/: CMakeLists.txt  main.cpp
demos/glfwTriangleNoBuffer/: CMakeLists.txt  main.cpp
demos/glfwWater/: CMakeLists.txt  main.cpp
demos/qt/: MainWindow.h
demos/qtHeightmapTesselation/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  renderer.cpp  renderer.h  vulkanwindow.cpp  vulkanwindow.h
demos/qtInstancing/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  renderer.cpp  renderer.h  vulkanwindow.cpp  vulkanwindow.h
demos/qtMaskTransition/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  renderer.cpp  renderer.h  vulkanwindow.cpp  vulkanwindow.h
demos/qtRender/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
demos/qtSampleUniform/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  renderer.cpp  renderer.h  vulkanwindow.cpp  vulkanwindow.h
demos/qtSkybox/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  renderer.cpp  renderer.h  vulkanwindow.cpp  vulkanwindow.h
demos/qtStencilOutline/: CMakeLists.txt  main.cpp  vulkanWindow.h  vulkanwindow.h
demos/render/: CMakeLists.txt  FooDemo.cpp  RenderHeadless.cpp
demos/utils/: Camera.h  Material.cpp  Material.h  TeapotQuad.h  teapotdata.h
examples/: ArraySum.cpp  BillboardGeometry.cpp  BlendingCube.cpp  Blur.cpp  Butterflies.cpp  ButterfliesGrassland.cpp  CMakeLists.txt  CMakeLists.txt_  ClearScreen.cpp  ClearScreenDemo.cpp  ClipPlane.cpp  ComputeCopy.cpp  ComputeDemo.cpp  ComputeEffect.cpp  ComputeExample.cpp  ComputeFlock.cpp  ComputeParticles.cpp  ComputePostEffect.cpp  ComputeRayTracing.cpp  ComputeSum.cpp  ComputeUV.cpp  CubeIndexed.cpp  CubeTextured.cpp  CubeUV.cpp  Deferred.cpp  DeferredShading.cpp  Demo.cpp  DepthOfField.cpp  DynamicUniformBuffer.cpp  Earth.cpp  FireParticles.cpp  Foo.cpp  FractalCompute.cpp  FractalComputeTexture.cpp  FractalComputeTextureFPSLimit.cpp  Fresnel.cpp  FullQuadNoTexture.cpp  (+91 more)
pompeii/: Buffer.cpp  Buffer.h  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.h  Descriptor.cpp  Descriptor.h  Device.cpp  Device.h  Display.cpp  Display.h  Event.cpp  Event.h  Fence.cpp  Fence.h  Framebuffer.cpp  Framebuffer.h  Image.cpp  Image.h  Instance.cpp  Instance.h  Log.cpp  Log.h  MemoryUtils.h  PhysicalDevice.cpp  PhysicalDevice.h  Pipeline.cpp  Pipeline.h  QueryPool.cpp  QueryPool.h  Queue.cpp  Queue.h  RenderAPICapabilites.h  RenderPass.cpp  RenderPass.h  Sampler.cpp  Sampler.h  Semaphore.cpp  Semaphore.h  StringUtils.hpp  (+24 more)
(+808 files in other folders)
